# QT-Client-and-Server

./: .gitignore
Client/: CMakeLists.txt
Client/.cache/clangd/index/: CConnection.cpp.54625E21D11CCB2A.idx  CConnection.h.86FDC8007AB001D0.idx  CLoginWindow.cpp.BBF779E44C17803C.idx  CLoginWindow.h.56ABB6BD8196534B.idx  CMainWindow.cpp.5BAFDCFA0EB26F6A.idx  CMainWindow.h.5B9F31F10DD780C7.idx  main.cpp.9171EAD4668C2166.idx
Client/src/: CMakeLists.txt  main.cpp
Client/src/App/: CConnection.cpp  CConnection.h  CConnectionThread.cpp  CConnectionThread.h
Client/src/App/Messages/: CLoginMessage.cpp  CLoginMessage.h  IMessage.h
Client/src/UI/: CMainWindow.cpp  CMainWindow.h
Client/src/UI/Components/: CLoginWindow.cpp  CLoginWindow.h
Client/src/UI/Components/Widgets/: CCustomShadowEffect.cpp  CCustomShadowEffect.h  CInputText.cpp  CInputText.h
Server/: CMakeLists.txt
Server/src/: CMakeLists.txt
Server/src/App/: CConnectionThread.cpp  CConnectionThread.h  CMessageHandler.cpp  CMessageHandler.h  CServer.cpp  CServer.h  CServerThread.cpp  CServerThread.h
Server/src/App/Messages/: CLoginMessage.cpp  CLoginMessage.h  IMessage.h
Server/src/PostgreSQL/: CDataBaseConnector.cpp  CDataBaseConnector.h  IConnector.h
Server/src/UI/: CMainWindow.cpp  CMainWindow.h
